# decrypt-otpauth-files

./: Dockerfile  README.md  decrypt_otpauth.py  pyproject.toml
.github/workflows/: build-docker-image.yaml
